--- a/desafios/des012/estilo/style.css
+++ b/desafios/des012/estilo/style.css
@@ -1,9 +1,83 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&family=Ranchers&display=swap');
+
 *{
     margin: 0;
     border: 0;
     padding: 0;
+    font-size: 1em;
+}
 
-    font-family: Arial, Helvetica, sans-serif;
+:root{
+    --font-padrao: Arial, Helvetica, sans-serif;
+    --font-destaque1: "Mukta Vaani", sans-serif;
+    --font-destaque2: "Ranchers", sans-serif;
+    --font-destaque3: "Kalam", cursive;
+} 
+
+html, body{
+    min-height: 100vh;
+    background-color: darkgray;
+    font-family: var(--font-destaque1);
+}
+
+header{
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1{
+    padding-top: 50px;
+    font-variant: small-caps;
+    font-family: var(--font-destaque2);
+    font-size: 10vw;
+}
+
+header > p{
+    padding-bottom: 50px;
+}
+
+header a, footer a {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+header a:hover, footer a:hover{
+    text-decoration: underline;
+}
+
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+    font-family: var(--font-destaque3);
+    font-weight: bolder;
+    font-size: 3.5vw;
+}
+
+section.normal{
+    background-color: white;
+    color: black;
+}
+
+section.imagem{
+    background-color: rgb(42, 41, 41);
+    color: white;
+}
+
+section.imagem > p{
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.26);
+    padding: 5px;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
