--- a/exercicios/ex027/flex014 - conteudo flex/estilo/style.css
+++ b/exercicios/ex027/flex014 - conteudo flex/estilo/style.css
@@ -18,9 +18,15 @@ body{
     height: 100vh; */
 }
 
-p, h1, h2{
+p{
     margin-bottom: 1em;
     text-align: justify;
+}
+
+h1, h2{
+    margin-bottom: 2rem;
+    line-height: 1.2em;
+    text-align: left;
 }
 
 header, section.normal, section.flex_content{
@@ -29,4 +35,44 @@ header, section.normal, section.flex_content{
 
 .flex_content{
     background-color: #aeadad;
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+/* section > article{
+    border: 2px dashed green;
+} */
+
+article.text_media{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+article.media_text{
+    display: flex;
+    flex-flow: row wrap-reverse;
+    justify-content: space-between;
+}
+
+article > div.text{
+    flex: 1 1 auto;
+}
+
+article > div.media{
+    flex: 1 0 auto;
+}
+
+div.media > img{
+    display: block;
+    margin: auto;
+    width: 300px;
+    padding: 10px;
+}
+
+div.media > iframe{
+    display: block;
+    margin: auto;
+    /* padding: 0 2rem; */
+    width: 90%;
 }
